Version 1.0.0 (lots of pom file fun).